<resources>
    <string name="app_name">Tinny Genius</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alreadyAccountText">"Already have an account? <u>Login</u>"</string>
    <string name="createAccountText">"Don't have an account? <u>Create new one</u>"</string>
    <string name="password">Password</string>
    <string name="practice">Practice</string>
    <string name="user_profile_str">Profile</string>
    <string name="setting">Setting</string>
    <string name="email">guestAccount@gmail.com</string>
    <string name="name">Guest Mode</string>
    <string name="get_started">HELLO</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to">Welcome to</string>
    <string name="full_name">Full Name</string>
    <string name="input_email">Email</string>
    <string name="confirm_pass">Confirm</string>
    <string name="home">Home</string>
    <string name="colors">Colors</string>
    <string name="numbers">Numbers</string>
    <string name="alphebets">Alphabets</string>
    <string name="shapes">Shapes</string>
    <string name="practices">Practices</string>
    <string name="forget_pass">Forget Password</string>
    <string name="animals">Animals</string>
    <string name="birds">Birds</string>
    <string name="aiScan">AI Scan</string>


    <!--    Alphabets     -->
    <string name="A">A for ant</string>
    <string name="B">B for Butterfly</string>
    <string name="C">C for Chick</string>
    <string name="D">D for Duck</string>
    <string name="E">E for Elephant</string>
    <string name="F">F for Flamingo</string>
    <string name="G">G for Giraffe</string>
    <string name="H">H for Horse</string>
    <string name="I">I for Iguana</string>
    <string name="J">J for jelly fish</string>
    <string name="K">K for Kangaroo</string>
    <string name="L">L for Lion</string>
    <string name="M">M for Monkey</string>
    <string name="N">N for Narwhal</string>
    <string name="O">O for owl</string>
    <string name="P">P for panda</string>
    <string name="Q">Q for Quail</string>
    <string name="R">R for rabbit</string>
    <string name="S">S for scorpio</string>
    <string name="T">T for tiger</string>
    <string name="U">U for unicorn</string>
    <string name="V">v for Van</string>
    <string name="W">W for Whale</string>
    <string name="X">X for X-ray Fish</string>
    <string name="Y">Y for Yak</string>
    <string name="Z">Z for Zebra</string>
    <string name="continue_btn">Continue</string>
    <string name="do_you_want_to_continue">Do you want to continue?</string>

</resources>